add animation to tree children

--- a/src/components/ui/TreeView/TreeView.module.scss
+++ b/src/components/ui/TreeView/TreeView.module.scss
@@ -1,10 +1,62 @@
+
+.treeViewItem {
+  display: flex;
+  align-items: center;
+  padding-block: .5rem;
+}
+.treeViewItem span[data-hasChildren="false"]{
+  opacity: 0;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+}
 .treeViewItem span[data-open] {
   width: 1rem;
   height: 1rem;
   display: inline-block;
-  background-color: red;
+  transform: rotate(-90deg);
+  transition: all .2s ease-in-out;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-image: url("data:image/svg+xml,%3Csvg width='14' height='8' viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L7 7L13 1' stroke='%238E9299' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 .treeViewItem span[data-open="true"] {
-  background-color: blue;
-  transform: rotate(90deg);
+  transform: rotate(0);
+}
+@-webkit-keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+            transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    opacity: 1;
+  }
+}
+@keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+            transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    opacity: 1;
+  }
+}
+.treeItemChild[data-open="true"]{
+  -webkit-animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+  animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
 }
